# CSG

./: CMakeLists.txt  main.cpp
csg_tree/: boolean_operation_node.cpp  boolean_operation_node.h  csg_tree.h  edge.cpp  edge.h  node.cpp  node.h  node_type.cpp  node_type.h  primitive_node.cpp  primitive_node.h  root.cpp  root.h  utils.cpp  utils.h
objects/: base_primitive.cpp  base_primitive.h  block.cpp  block.h  cylinder.cpp  cylinder.h  rt_utils.cpp  rt_utils.h  sphere.cpp  sphere.h
strippedRayTracer/RayTracerRedone/: RayTracerRedone.cpp  worlds.h
strippedRayTracer/RayTracerRedone/imageoutputcanvas/: imagecanvas.cpp
strippedRayTracer/RayTracerRedone/tracer/objects/: VirtualObject.h
strippedRayTracer/RayTracerRedone/tracer/scene/materials/: BumpMapping.cpp
